server-side ciphers preference. Example (using monit's default ciphers string):
    set ssl {
        ciphers: "ALL:!DES:!3DES:!RC4:!aNULL:!LOW:!EXP:!IDEA:!MD5:@STRENGTH"
    }

New: The certificate minimum valid days test now triggers the timestamp event instead
of connection event.

New: M/Monit: show MacOS version instead of Darwin kernel version.

Fixed: Previous Monit versions may be unable to detect that the filesystem is not
mounted in the case that mountpoint was used as a filesystem path. The reason is,
that the mountpoint itself resides on some filesystem (for example root filesystem)
and thus even if the filesystem is not mounted, the directory may still exist - Monit
didn't require exact match in the mount table and allowed filesystem subdirectory or even
regular file to be used as filesystem path. The exact mountpoint match is now required,
so Monit can check if the filesystem is mounted. This fix doesn't affect the configuration
with block/character device.

Fixed: Issue #488: Ping test may fail if the machine performs other ping tests with small payload.

Fixed: Issue #543: Ping test may timeout prematurely on machine with heavy ICMP traffic.

Fixed: Issue #495: Position independent CSRF cookie value.

Fixed: Issue #496: Allow overriding the Accept HTTP header

Fixed: Issue #501: check program may fail when parent service is not monitored every cycle and multiple
services depend on it.

Fixed: Issue #510: The "set ssl" options defaults had no effect on the Monit HTTPD interface.

Fixed: Issue #515: The compression may fail of response body is empty and zlib version <= 1.2.3.

Fixed: Issue #537: Monit HTTP server could not start if no network interface available

Fixed: Issue #549: Mailserver on port 587 doesn't work with STARTTLS.

Fixed: Monit HTTP GUI: Safari may fail to load the page if SSL is enabled.

Fixed: If the connection timed out, Monit reported incorrect error: "Resource temporarily unavailable".
